@@ -1,3 +1,8 @@
+2019-04-25  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 44254: Src/compat.c: make quite sure we've reached "/"
+	in zgetdir(), else report an error.
+
 2019-04-22  Matthew Martin  <phy1729@gmail.com>
 
 	* unposted: Completion/Base/Utility/_pick_variant: Use
